# orbis-elf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  orbis-elf.sln
liborbis-elf/: CMakeLists.txt  Makefile  liborbis-elf.vcxproj  liborbis-elf.vcxproj.filters
liborbis-elf/include/: orbis-elf-api.h  orbis-elf-enums.h  orbis-elf-types.h
liborbis-elf/source/: orbis-elf-api.c
make/: config.mk  patterns.mk
orbis-elf/: CMakeLists.txt  Makefile  orbis-elf.c  orbis-elf.vcxproj  orbis-elf.vcxproj.filters
